# ift_coursework_2025

./: README.md  docker-compose.override.yml  docker-compose.yml
team_Pearson/coursework_one/: .env.example  Main.py  README.md  __init__.py  pyproject.toml
team_Pearson/coursework_one/config/: conf.yaml  conf.yaml.example
team_Pearson/coursework_one/docs/: ISSUES.md  README.md  ROLE4_INTEGRATION_NOTICE.md  conf.py  data_catalog.md  data_dictionary.md  data_lineage.md  data_requirement.md  usage.md
team_Pearson/coursework_one/logs/: pipeline_runs.jsonl
team_Pearson/coursework_one/modules/db/: __init__.py  db_connection.py  models.py  universe.py
team_Pearson/coursework_one/modules/input/: extract_source_a.py  extract_source_b.py
team_Pearson/coursework_one/modules/output/: __init__.py  audit.py  data_contract.py  load.py  loader.py  normalize.py  quality.py
team_Pearson/coursework_one/modules/transform/: factors.py
team_Pearson/coursework_one/modules/utils/: args_parser.py
team_Pearson/coursework_one/scripts/: auto_update_job.sh  index_news_to_mongo.py  init_db.py  manage_universe_overrides.py  run_scheduled_pipeline.py  search_news.py  validate_pipeline_data.py
team_Pearson/coursework_one/sql/: init.sql
team_Pearson/coursework_one/test/: test_smoke.py
team_Pearson/coursework_one/tests/: test_args_parser_unit.py  test_db_models_unit.py  test_db_unit.py  test_e2e.py  test_factors_unit.py  test_load_unit.py  test_normalize_unit.py  test_pipeline_integration.py  test_quality_unit.py  test_smoke.py  test_source_a_unit.py  test_source_b_unit.py
(+107 files in other folders)
