[tool.poetry]
name = "team-pearson-coursework-one"
version = "0.1.0"
description = "CW1 pipeline skeleton for Team Pearson"
authors = ["Team Pearson <team@example.com>"]
readme = "README.md"
packages = [{ include = "modules" }]

[tool.poetry.dependencies]
python = "^3.11"
pyyaml = "^6.0.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-cov = "^5.0.0"
black = "^24.8.0"
isort = "^5.13.2"
flake8 = "^7.1.1"
bandit = "^1.7.9"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]

[tool.bandit]
skips = ["B101"]

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"